EventScope tests now passing